# MolGNN

./: README.md  app.py  molecule_gnn.ipynb  pyproject.toml  requirements.txt
models/: gat_model.pt  gat_v2_model.pt  gcn_model.pt  gin_model.pt  graph_transformer_model.pt
scripts/: eval.py  inference.py  models.py  train.py
