[project]
name = "molgnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rdkit>=2026.3.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]
